// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders Draggable Modal correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      aria-modal={false}
      onKeyDown={[Function]}
      role="dialog"
      style={
        Object {
          "outline": "none",
          "overflowY": undefined,
        }
      }
    >
      <div
        className=
            ms-Modal
            is-open
            test-className
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              opacity: 1;
              pointer-events: auto;
              position: absolute;
              transition: opacity 0.267s;
              width: 100%;
            }
      >
        <div
          className=
              ms-Dialog-main
              test-containerClassName
              {
                background-color: #ffffff;
                border-radius: 2px;
                box-shadow: 0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18);
                box-sizing: border-box;
                cursor: move;
                max-height: calc(100% - 32px);
                max-width: calc(100% - 32px);
                min-height: 176px;
                min-width: 288px;
                outline: 3px solid transparent;
                overflow-y: auto;
                position: relative;
                text-align: left;
                z-index: 1000000;
              }
          onBlur={[Function]}
          onFocus={[Function]}
          onFocusCapture={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "transform": "translate(0px, 0px)",
            }
          }
        >
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
          <div
            className=
                ms-Modal-scrollableContent
                {
                  flex-grow: 1;
                  max-height: 100vh;
                  overflow-y: auto;
                }
                @supports (-webkit-overflow-scrolling: touch){& {
                  max-height: 768px;
                }
            data-is-scrollable={true}
          >
            Test Content
          </div>
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Modal renders Modal correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      aria-modal={true}
      onKeyDown={[Function]}
      role="dialog"
      style={
        Object {
          "outline": "none",
          "overflowY": undefined,
        }
      }
    >
      <div
        className=
            ms-Modal
            is-open
            test-className
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              opacity: 1;
              pointer-events: auto;
              position: fixed;
              transition: opacity 0.267s;
              width: 100%;
            }
      >
        <div
          className=
              ms-Overlay
              ms-Overlay--dark
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: rgba(0,0,0,.4);
                bottom: 0px;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                left: 0px;
                position: absolute;
                right: 0px;
                top: 0px;
              }
              @media screen and (-ms-high-contrast: active){& {
                border: 1px solid WindowText;
                opacity: 0;
              }
        />
        <div
          className=
              ms-Dialog-main
              test-containerClassName
              {
                background-color: #ffffff;
                border-radius: 2px;
                box-shadow: 0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18);
                box-sizing: border-box;
                max-height: calc(100% - 32px);
                max-width: calc(100% - 32px);
                min-height: 176px;
                min-width: 288px;
                outline: 3px solid transparent;
                overflow-y: auto;
                position: relative;
                text-align: left;
              }
          onBlur={[Function]}
          onFocus={[Function]}
          onFocusCapture={[Function]}
        >
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
          <div
            className=
                ms-Modal-scrollableContent
                {
                  flex-grow: 1;
                  max-height: 100vh;
                  overflow-y: auto;
                }
                @supports (-webkit-overflow-scrolling: touch){& {
                  max-height: 768px;
                }
            data-is-scrollable={true}
          >
            Test Content
          </div>
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Modal renders Modeless Modal correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      aria-modal={false}
      onKeyDown={[Function]}
      role="dialog"
      style={
        Object {
          "outline": "none",
          "overflowY": undefined,
        }
      }
    >
      <div
        className=
            ms-Modal
            is-open
            test-className
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              background-color: transparent;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 100%;
              justify-content: center;
              opacity: 1;
              pointer-events: auto;
              position: absolute;
              transition: opacity 0.267s;
              width: 100%;
            }
      >
        <div
          className=
              ms-Dialog-main
              test-containerClassName
              {
                background-color: #ffffff;
                border-radius: 2px;
                box-shadow: 0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18);
                box-sizing: border-box;
                max-height: calc(100% - 32px);
                max-width: calc(100% - 32px);
                min-height: 176px;
                min-width: 288px;
                outline: 3px solid transparent;
                overflow-y: auto;
                position: relative;
                text-align: left;
                z-index: 1000000;
              }
          onBlur={[Function]}
          onFocus={[Function]}
          onFocusCapture={[Function]}
        >
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
          <div
            className=
                ms-Modal-scrollableContent
                {
                  flex-grow: 1;
                  max-height: 100vh;
                  overflow-y: auto;
                }
                @supports (-webkit-overflow-scrolling: touch){& {
                  max-height: 768px;
                }
            data-is-scrollable={true}
          >
            Test Content
          </div>
          <div
            data-is-visible={true}
            onFocus={[Function]}
            style={
              Object {
                "pointerEvents": "none",
                "position": "fixed",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</span>
`;
